methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:11: error: not found: value vuBaggle
      vuBaggle = true
      ^MethodsReturning:17: error: not found: value vuBaggle
  return vuBaggle
         ^